--- a/app/src/main/res/layout-land/activity_register.xml
+++ b/app/src/main/res/layout-land/activity_register.xml
@@ -10,8 +10,9 @@
         android:id="@+id/imageViewRegister"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginTop="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
@@ -20,13 +21,16 @@
         android:id="@+id/editTextUsuarioR"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
         android:ems="10"
         android:hint="@string/NombreUsuario"
         android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewRegister" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/imageViewRegister"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.26" />
 
     <EditText
         android:id="@+id/editTextContraseñaR"
@@ -36,8 +40,8 @@
         android:ems="10"
         android:hint="@string/Contraseña"
         android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/editTextUsuarioR"
+        app:layout_constraintStart_toStartOf="@+id/editTextUsuarioR"
         app:layout_constraintTop_toBottomOf="@+id/editTextUsuarioR" />
 
     <EditText
@@ -48,9 +52,8 @@
         android:ems="10"
         android:hint="@string/Contraseña2"
         android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/editTextContraseñaR"
+        app:layout_constraintStart_toStartOf="@+id/editTextContraseñaR"
         app:layout_constraintTop_toBottomOf="@+id/editTextContraseñaR" />
 
     <Button
@@ -61,8 +64,8 @@
         android:onClick="onClickRegistro"
         android:text="@string/Registrarse"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/editTextContraseñaR2"
+        app:layout_constraintStart_toStartOf="@+id/editTextContraseñaR2"
         app:layout_constraintTop_toBottomOf="@+id/editTextContraseñaR2"
         app:layout_constraintVertical_bias="0.0" />
 
