--- a/app/src/main/res/layout-land/fila_favoritos.xml
+++ b/app/src/main/res/layout-land/fila_favoritos.xml
@@ -24,7 +24,7 @@
 
     <TextView
         android:id="@+id/textViewFechaFav"
-        android:layout_width="70dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
@@ -42,12 +42,15 @@
         android:layout_width="102dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
         android:onClick="onClickQuitar"
         android:text="@string/Quitar"
         android:textSize="8sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/buttonComentariosFav"
         app:layout_constraintStart_toStartOf="@+id/buttonComentariosFav"
-        app:layout_constraintTop_toBottomOf="@+id/buttonComentariosFav" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonComentariosFav"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/buttonComentariosFav"
