--- a/app/src/main/res/layout/fila_ver_mas_tarde.xml
+++ b/app/src/main/res/layout/fila_ver_mas_tarde.xml
@@ -13,10 +13,11 @@
         android:id="@+id/imageViewPortadaVMT"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.07"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
@@ -25,29 +26,26 @@
         android:id="@+id/textViewFechaVMT"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="10dp"
         android:text="TextView"
         android:textAlignment="center"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageViewPortadaVMT"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTituloFav3"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="@+id/textViewTituloFav3"
+        app:layout_constraintStart_toStartOf="@+id/textViewTituloFav3"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTituloFav3" />
 
     <TextView
         android:id="@+id/textViewTituloVMT"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
         android:text="TextView"
         android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageViewPortadaVMT"
+        app:layout_constraintStart_toStartOf="@+id/imageViewPortadaVMT"
         app:layout_constraintTop_toBottomOf="@+id/imageViewPortadaVMT"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -55,28 +53,22 @@
         android:id="@+id/textViewTituloFav3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
         android:text="@string/FechaProgramada"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageViewPortadaVMT"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.48000002" />
+        app:layout_constraintBottom_toTopOf="@+id/textViewTituloVMT"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageViewPortadaVMT" />
 
     <Button
         android:id="@+id/buttonVMT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
         android:onClick="onClickQuitar"
         android:text="@string/Quitar"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewTituloVMT"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textViewTituloFav3"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.92"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageViewPortadaVMT" />
 </androidx.constraintlayout.widget.ConstraintLayout>
