--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -103,7 +103,7 @@
 
         <fragment
             android:id="@+id/fragmentPreferencias"
-            android:name="com.example.entrega1.Preferencias"
+            android:name="com.example.entrega1.Fragments.Preferencias"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1" />
