--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
 
     <fragment
         android:id="@+id/fragmentPreferencias"
-        android:name="com.example.entrega1.Preferencias"
+        android:name="com.example.entrega1.Fragments.Preferencias"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
