--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,14 +4,14 @@
         <item name="colorPrimary">#BFA4D0F3</item>
         <item name="colorPrimaryDark">#6FBEFD</item>
         <item name="colorAccent">#074E9F</item>
-        <item name="android:windowBackground">#E0F7FA</item>
+        <item name="android:windowBackground">@color/window_background</item>
     </style>
 
     <style name="CustomThemeParaMain" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorPrimary">#BFA4D0F3</item>
         <item name="colorPrimaryDark">#6FBEFD</item>
         <item name="colorAccent">#074E9F</item>
-        <item name="android:windowBackground">#E0F7FA</item>
+        <item name="android:windowBackground">@color/window_background</item>
     </style>
 
     <style name="CustomStyle">
